--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -413,18 +413,24 @@
                         </div>
 
                         <div class="col-md-6">
-                            <div id="date-picker">
-                                <div class="input">
-                                    <div class="result">Start Date: <span></span></div>
-                                    <button><i class="fa fa-calendar"></i></button>
-                                </div>
-                                <div class="calendar"></div>
-                            </div>
+                            <label
+                                    for="start_date"
+                                    class="col-sm-12 col-form-label"
+                            >Start Date
+                                <span style="color: red">
+                                            *</span
+                                ></label
+                            >
+                            <input
+                                    type="text"
+                                    class="form-control border-task-description"
+                                    id="start_date"
+                            />
                         </div>
 
                         <div class="col-md-6">
                             <label
-                                    for="end_time"
+                                    for="end_date"
                                     class="col-sm-12 col-form-label"
                             >End Date
                                 <span style="color: red">
@@ -432,10 +438,9 @@
                                 ></label
                             >
                             <input
-                                    type="date"
+                                    type="text"
                                     class="form-control border-task-description"
-                                    id="end_time"
-                                    name="end_time"
+                                    id="end_date"
                             />
                         </div>
 
@@ -524,44 +529,34 @@
         import {getData, sendData} from "/js/api-function.js";
         import {getTimeElapsed} from "/js/time.js";
 
-        //initialize jqeury ui datepicker after clicked #date-picker
-        $('#date-picker')
-
-        // Get the project ID from the hidden element
-        const projectId = document.getElementById("projectId").innerText;
-
         const projectStartDateElement = document.getElementById("projectStartDate");
         const projectEndDateElement = document.getElementById("projectEndDate");
 
-        if (projectStartDateElement && projectEndDateElement) {
-            console.log("in first if")
-            const projectStartDateTimestamp = parseInt(projectStartDateElement.innerText.trim());
-            const projectEndDateTimestamp = parseInt(projectEndDateElement.innerText.trim());
+        //initialize jqeury ui datepicker
+        $(function () {
+            $("#start_date").datepicker({
+                minDate: new Date(parseInt(projectStartDateElement.innerText)),
+                maxDate: new Date(parseInt(projectEndDateElement.innerText)),
+                dateFormat: 'yy-mm-dd',
+                onSelect: function (dateText, inst) {
+                    if (dateText !== "") {
+                        var dateObject = $(this).datepicker('getDate');
 
-            if (!isNaN(projectStartDateTimestamp) && !isNaN(projectEndDateTimestamp)) {
-                console.log("in second if")
-                const start_date = new Date(projectStartDateTimestamp);
-                const end_date = new Date(projectEndDateTimestamp);
+                        $("#end_date").datepicker('option', 'minDate', dateObject);
 
-                const formattedStartDate = start_date.toISOString().split('T')[0];
-                const formattedEndDate = end_date.toISOString().split('T')[0];
+                    }
+                }
+            });
 
-                console.log(formattedStartDate , formattedEndDate)
+            $("#end_date").datepicker({
+                maxDate: new Date(parseInt(projectEndDateElement.innerText)),
+                dateFormat: 'yy-mm-dd',
+            });
 
-                // Set the minDate and maxDate options for the datepicker
-                $('#start_time').min = formattedStartDate
-                $('#start_time').max =  formattedEndDate
+        });
 
-                $('#end_time').min = formattedStartDate
-                $('#end_time').max = formattedEndDate
-
-            } else {
-                console.error("Invalid timestamp values from the elements.");
-            }
-        } else {
-            console.error("Could not find elements with specified IDs.");
-        }
-
+        // Get the project ID from the hidden element
+        const projectId = document.getElementById("projectId").innerText;
 
         // Function to fetch the members' list from the backend API
         let membersList = [];
