--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -132,6 +132,18 @@
                 <div class="modal-body">
                     <div class="container-fluid">
                         <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-1 row-cols-xl-1 row-cols-xxl-1 gap-2">
+                            <div class="alert alert-danger alert-dismissible" id="errorAlert" style="display: none;">
+                                <strong>Error : </strong> <span id="errorText"></span>
+                                <button type="button" class="btn-close btn-dark" aria-label="close" style="background: transparent; position: absolute; top: 0; right: 0;">
+                                    &times;
+                                </button>
+                            </div>
+                            <div class="alert alert-success alert-dismissible" id="successAlert" style="display: none;">
+                                <strong>Success : </strong> <span id="successText"></span>
+                                <button type="button" class="btn-close btn-dark" aria-label="close" style="background: transparent; position: absolute; top: 0; right: 0;">
+                                    &times;
+                                </button>
+                            </div>
                             <div class="col mb-3">
                                 <input type="hidden" id="solved" />
                                 <h5 class="icon-title"><i class="fas fa-wrench text-dark"></i> Corrective Action</h5>
@@ -143,7 +155,6 @@
                                 <textarea id="preventive_actionInput" class="form-control form-control-sm btn-space" name="preventive_action" rows="5"></textarea>
 
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -585,7 +596,8 @@
                 selectedUserId === ""||
                 responsible_type === ""
             ) {
-                alert('Please fill in all the required fields.');
+                //alert('Please fill in all the required fields.');
+                showError('Plese fill in all the required fields.');
                 return;
             }
 
@@ -786,23 +798,28 @@
             });
         });
 
+
         issueEditBtn.addEventListener('click', function (e) {
             const corrective_action = $('#corrective_actionInput').val();
             const preventive_action = $('#preventive_actionInput').val();
             const solved = $('#solve-btn').val();
             const issueId = $(this).data('issueId');
             console.log(solved + " solveddddddd");
+            if (corrective_action === "" || preventive_action === "") {
+                // alert('Please fill in all the required fields.');
+                showError('Please fill in all the required fields.');
+                return;
+            }
 
             if (solved === "true") {
                 // If solved, hide the "issue-edit-btn" and show the "solve-btn"
                 $("#issue-edit-btn").hide();
                 $("#solveBtn").show();
             } else {
-                // If not solved, hide the "solve-btn" and show the "issue-edit-btn"
-                $("#issue-edit-btn").show();
+                // If not solved, show the confirmation modal
                 Swal.fire({
-                    title: "Are you sure!",
-                    text: "Are you sure want to solve?",
+                    title: "Are you sure?",
+                    text: "Are you sure you want to solve?",
                     icon: "warning",
                     showCancelButton: true,
                     confirmButtonColor: "#3085d6",
@@ -810,70 +827,77 @@
                     confirmButtonText: "Yes"
                 }).then((result) => {
                     if (result.isConfirmed) {
-                        Swal.fire({
-                            title: "Success!",
-                            text: "Your have been successful to solved.",
-                            icon: "success"
+                        const updatedDetails = {
+                            corrective_action: corrective_action,
+                            preventive_action: preventive_action,
+                            updated_date: new Date().getTime(),
+                            solved_date: new Date().getTime(),
+                            solved: solved,
+                        };
+                        console.log("UpdateDetails", updatedDetails);
+
+                        $.ajax({
+                            url: `/api/issue/update/${issueId}`, // Update the URL to include the issue ID
+                            type: 'PUT',
+                            contentType: 'application/json',
+                            data: JSON.stringify(updatedDetails),
+                            dataType: 'json',
+                            success: function (data) {
+                                console.log(data);
+                                console.log("Issue Updated Successfully");
+                                // Update 'solved' to true after a successful AJAX request
+                                $('#solve-btn').val("true");
+                                const spanContent = 'Solved';
+                                const spanColor = 'success';
+                                $('#solved').empty().html(`<span class="card-title badge rounded-pill bg-${spanColor}" id="solved">${spanContent}</span>`);
+                                Swal.fire({
+                                    title: "Success!",
+                                    text: "You have successfully solved the issue.",
+                                    icon: "success"
+                                });
+                                console.log("Success")
+                                $("#issue-edit-btn").hide();
+                                $("#solve-btn").show();
+
+
+                                },
+                            error: function (xhr, status, error) {
+                                console.log('Status:', status);
+                                console.log('Error:', error);
+                                console.log('Server response:', xhr.responseText);
+
+                                if (xhr.getResponseHeader('Content-Type') === 'application/json') {
+                                    // Handle JSON response
+                                    try {
+                                        const response = JSON.parse(xhr.responseText);
+                                        console.log('JSON Response:', response);
+                                    } catch (e) {
+                                        console.log('JSON parsing error:', e);
+                                    }
+                                } else {
+                                    // Handle non-JSON response
+                                    console.log('Non-JSON Response:', xhr.responseText);
+                                }
+                                alert("Error updating issue: " + xhr.responseText);
+                                console.log("Error updating issue");
+                            },
+                            complete: function () {
+                                // Optionally, close the modal or perform other actions upon completion
+                                $('#issueDetailModal').modal('hide');
+                            }
                         });
-                    }else{
+
+                    } else {
+                        // User clicked "No," stop the process and close the modal
                         return false;
                     }
                 });
+
+                // Hide the "solve-btn" regardless of user choice
                 $("#solveBtn").hide();
             }
-
-            if (corrective_action === "" || preventive_action === "") {
-                alert('Please fill in all the required fields.');
-                return;
-            }
-
-            const updatedDetails = {
-                corrective_action: corrective_action,
-                preventive_action: preventive_action,
-                updated_date: new Date().getTime(),
-                solved_date: new Date().getTime(),
-                solved: solved,
-            };
-
-            console.log("UpdateDetails", updatedDetails);
-
-            $.ajax({
-                url: `/api/issue/update/${issueId}`, // Update the URL to include the issue ID
-                type: 'PUT',
-                contentType: 'application/json',
-                data: JSON.stringify(updatedDetails),
-                dataType: 'json',
-                success: function (data) {
-                    console.log(data);
-                    console.log("Issue Updated Successfully");
-                },
-                error: function (xhr, status, error) {
-                    console.log('Status:', status);
-                    console.log('Error:', error);
-                    console.log('Server response:', xhr.responseText);
-
-                    if (xhr.getResponseHeader('Content-Type') === 'application/json') {
-                        // Handle JSON response
-                        try {
-                            const response = JSON.parse(xhr.responseText);
-                            console.log('JSON Response:', response);
-                        } catch (e) {
-                            console.log('JSON parsing error:', e);
-                        }
-                    } else {
-                        // Handle non-JSON response
-                        console.log('Non-JSON Response:', xhr.responseText);
-                    }
-                    alert("Error updating issue: " + xhr.responseText);
-                    console.log("Error updating issue");
-                },
-                complete: function () {
-                    // Optionally, close the modal or perform other actions upon completion
-                    $('#issueDetailModal').modal('hide');
-                }
-            });
-
         });
+
 
 
         $("#reset-btn").on("click", function () {
@@ -1047,7 +1071,7 @@
                                             <p class="card-title badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary border border-primary rounded-pill">
                                                 ${item.responsible_party.name}
                                             </p>
-                                              <span class="card-title badge rounded-pill bg-${item.solved === true ? 'success' : 'danger'}">
+                                              <span class="card-title badge rounded-pill bg-${item.solved === true ? 'success' : 'danger'}" id="solved">
                                             ${item.solved === true ? 'Solved' : 'Unsolved'}
 
                                         </span>
