--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -732,7 +732,7 @@
                                             <h5 class="card-title issueDetails" data-id="${item.id}" style="text-decoration: none; cursor:pointer;">${item.title}</h5>
 
                                             <p class="card-title badge d-flex align-items-center p-1 pe-2 text-primary-emphasis bg-primary border border-primary rounded-pill">
-                                                ${item.responsible_party.id}
+                                                ${item.responsible_party.name}
                                             </p>
                                               <span class="card-title badge rounded-pill bg-${item.solved === true ? 'success' : 'danger'}">
                                             ${item.solved === true ? 'Solved' : 'Unsolved'}
